- Menu items that used Control for the accelerator keystroke should now
  use Command on Macs (though I can't really test this).
- Added more options to the right-click menu when browsing scores.
- Fixed bug that made the go to song feature stop working after opening
  the score upload wizard.
- Added a toolbar for quicker access to some of the menu commands.

Version 0.2.8
-------------
- Added more performance improvements. The "Downloaded Songs" tier in
  Rock Band shouldn't take as much time to load now though it will still
  be slower depending on how many different songs you have scores for
  (this won't affect you unless you have scores for the majority of the
  songs in the DLC tier).

Version 0.2.7
-------------
- Added some performance improvements, it shouldn't take as long between
  clicking a game/instrument/difficulty menu item and the data appearing.
  The "Downloaded Songs" tier in Rock Band takes a noticable amount
  of time to expand due to the large number of songs in that tier. This
  is a known issue.
- Added a new update mechanism for Rock Band song data that should make
  updating the song data a little faster.
- Added Classic Rock Track Pack tier for RB2 on PS2.
- Added confirmation dialog if you have un-uploaded scores when you try
  to exit the program or switch games/instruments/difficulties.

Version 0.2.6
-------------
- Added Rock Band 2 for PS2 and Wii (finally).

Version 0.2.5
-------------
- Added Track Pack Volume 2 tier for PS2 and Wii and AC/DC Live Track Pack
  tier for Wii.

Version 0.2.4
-------------
- Fixed error when trying to download song data after a song's name
  had been changed on ScoreHero.
- Added Rock Band 2 for PS3.
- Added AC/DC Live Track Pack tier for Rock Band games.
- Added additional forum links.

Version 0.2.3
-------------
- Some text has been converted to be more "friendly."
- The splash screen is no longer always-on-top.
- Added a context menu when you right-click on a song in the scores